añadir título adicional al cronómetro

--- a/JSejercicio3/ejercicio_entregable_3_cronometro_haizea_lertxundi.html
+++ b/JSejercicio3/ejercicio_entregable_3_cronometro_haizea_lertxundi.html
@@ -21,6 +21,7 @@
   </head>
 
   <body>
+    <h1>Cronómetro</h1>
     <h1>Click para iniciar/pausar</h1>
     <div id="cronometro">00:00</div>
   </body>
