Actualizar estilos y añadir notificaciones para tareas completadas

--- a/htmlejercicio3/ejercicio3.html
+++ b/htmlejercicio3/ejercicio3.html
@@ -4,7 +4,7 @@
     <title>TAREAS CUOTIDIANAS</title>
     <link rel="stylesheet" href="ejercicio3.css" />
     <script src="./ejercicio3.js" defer></script>
-    <h1>LISTA DE TAREAS</h1>
+    <h1>LISTA DE TAREAS 🧑‍💻</h1>
   </head>
   <body>
     <label for="mensaje"><h2>AÑADIR TAREA</h2></label>
